[package]
name = "python-interpreter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.100"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false, features = ["compiler", "freeze-stdlib", "stdio", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
